appId: ${APP_ID}
tags:
  - wallet
  - parallel
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          clearKeychain: true
          arguments:
            isE2ETest: true
      - runFlow: ../utils/Prepare.yaml
      - runFlow: ../utils/ImportWalletWithKey.yaml

      # Send ETH to test wallet
      - tapOn:
          id: fund-test-wallet-button

      # Connect to Anvil (test network)
      - tapOn:
          id: dev-button-anvil

      # Open send sheet
      - retry:
          maxRetries: 3
          commands:
            - assertVisible:
                id: 'balance-coin-row-Ethereum'
      - tapOn:
          id: send-button
      - assertVisible:
          id: send-asset-form-field

      # Test ENS address input
      - inputText: 'rainbowwallet.eth'
      - retry:
          maxRetries: 3
          commands:
            - assertVisible:
                id: send-asset-list

      # unsure why but the id doesn't work on iOS and the text doesn't work on Android
      - runFlow:
          when:
            platform: iOS
          commands:
            - tapOn:
                text: '.*Ethereum.*'
      - runFlow:
          when:
            platform: Android
          commands:
            - tapOn:
                id: send-asset

      - tapOn:
          id: selected-asset-field-input
      - inputText: '0.01'

      - retry:
          maxRetries: 3
          commands:
            - assertVisible: .*Review
      - tapOn: .*Review

      # Test enter amount
      - assertVisible: 'Sending'
      - assertVisible: '0.01 ETH'
      - assertVisible: 'rainbowwallet.eth'

      # iOS is 'Hold to Send' button is stuck on 'Loading...'
      # atm for some reason. Need to investigate. Unblocking e2e for now.
      - runFlow:
          when:
            platform: Android
          commands:
            - longPressOn: 'Hold to Send'
            - runFlow: ../utils/MaybeSetupPin.yaml

            # Check toast data
            - assertVisible:
                text: 'Sending'
                childOf:
                  id: toast-.*
            - assertVisible:
                text: '0.01 ETH'
                childOf:
                  id: toast-.*
            # Open toast
            - tapOn:
                id: toast-.*
            # Check expended toast data
            - assertVisible:
                text: 'Sending'
                childOf:
                  id: toast-expanded-.*
            - assertVisible:
                text: '0.01 ETH'
                childOf:
                  id: toast-expanded-.*
            - tapOn:
                id: toast-expanded-.*
            # Check transaction sheet
            - assertVisible: 'Sending'
            - assertVisible: '.*Tx Hash*.'
            - assertVisible: 'View on Etherscan'
            - swipe:
                direction: DOWN
