# Swaps entry point
# wrap
# unwrap
# flip
# max

appId: ${APP_ID}
tags:
  - wallet
  - parallel
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          clearKeychain: true
          arguments:
            isE2ETest: true
      - runFlow: ../utils/Prepare.yaml
      - runFlow: ../utils/ImportWalletWithKey.yaml

      # Send ETH to test wallet
      - tapOn:
          id: fund-test-wallet-button

      # Connect to Anvil (test network)
      - tapOn:
          id: dev-button-anvil

      # Open swap screen
      - tapOn:
          id: balance-coin-row-Ethereum
      - tapOn:
          id: swap-action-button
      - tapOn:
          id: ETH
      - tapOn:
          text: Ethereum
          index: 1
      - tapOn:
          text: Find a token to buy
      - inputText: WETH
      - tapOn:
          text: Wrapped Ether

      # # Open swap screen
      # - tapOn:
      #     id: swap-button
      # - assertVisible:
      #     id: swap-screen
      # # Select DAI as output token
      # - tapOn: 'Find a token to buy'
      # - inputText: 'DAI'
      # - tapOn:
      #     id: token-to-buy-dai-1
      # - assertVisible: 'DAI.*'
      # - assertVisible: 'No Balance'
      # - hideKeyboard
      # # cant get swap-bottom-action-button to work, but that would be ideal.
      # - longPressOn:
      #     point: 63%, 88%
      # - runFlow: ../utils/MaybeSetupPin.yaml
      # - tapOn:
      #     id: tab-bar-icon-ProfileScreen

      # # Test transaction was done
      # - assertVisible: 'Pending'
      # - assertVisible: 'Swapping*.'

      # - tapOn: Swapping*.
      # # also having issues with this test id.
      # - tapOn:
      #     id: transaction-details-context-menu-button
      # - assertVisible: 'Speed Up'
      # - assertVisible: 'Cancel'
