# Swaps entry point
# wrap
# unwrap
# flip
# max

appId: ${APP_ID}
tags:
  - wallet
  - parallel
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          clearKeychain: true
          arguments:
            isE2ETest: true
      - runFlow: ../utils/Prepare.yaml
      - runFlow: ../utils/ImportWalletWithKey.yaml

      # Send ETH to test wallet
      - tapOn:
          id: fund-test-wallet-button

      # Connect to Anvil (test network)
      - tapOn:
          id: dev-button-anvil

      # Open swap screen
      - tapOn:
          id: balance-coin-row-Ethereum
      - tapOn:
          id: swap-action-button
      - tapOn: 'ETH 􀆏'
      - tapOn: 'Ethereum.*'
      - tapOn:
          text: Find a token to buy
      - inputText: WETH
    # TODO: mock Weth. Dai works bc Favorites are prepopulated with some sort of data?
    #   - tapOn:
    #       text: Wrapped Ether
