appId: ${APP_ID}
env:
  # empty publicly known wallet
  SECRET_PHRASE: test test test test test test test test test test junk junk
  NAME: 'Secret Phrase Wallet'
---
# This is usually ran as the first command so make sure it has enough time to load the app.
- extendedWaitUntil:
    visible:
      id: welcome-screen
    timeout: 60000
- openLink: rainbow://e2e/import?privateKey=${SECRET_PHRASE}&name=${NAME}
# The first time a simulator opens a link it shows a dialog.
- runFlow:
    when:
      visible: 'Open in .*'
      platform: iOS
    commands:
      - tapOn: 'Open'
# Secret phrase wallets can take longer to load
- extendedWaitUntil:
    visible:
      id: wallet-screen
    timeout: 60000
# Wait for the wallet screen to load.
- extendedWaitUntil:
    visible:
      id: receive-card
    timeout: 30000
