appId: ${APP_ID}
---
- launchApp:
    clearState: true
    clearKeychain: true
- runFlow: ./Prepare.yaml
- assertVisible:
    id: welcome-screen-broken
- tapOn: '.*Get a new wallet'
- runFlow: ../utils/MaybeSetupPin.yaml
- runFlow: ../utils/HandleOptionalNotificationPermission.yaml
- assertVisible:
    id: 'eth-card'
